# DS_Mentoring

./: .gitignore  Makefile  README.md  pyproject.toml
disaster_tweets/: preprocessing.py
notebooks/: 01_disaster_tweets_eda.ipynb  02_logreg_tfidf_baseline.ipynb
