[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "disaster_tweets"
version = "0.0.1"
description = "Task 1: Kaggle Disaster Tweets"
authors = [
  { name = "Katsiaryna" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "category-encoders>=2.9.0",
    "jupyter",
    "matplotlib",
    "mlflow>=3.9.0",
    "numpy",
    "pandas",
    "pycountry",
    "pyspellchecker",
    "pytest",
    "python-dotenv",
    "rapidfuzz",
    "ruff",
    "scikit-learn",
    "seaborn",
    "spacy",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

